// Vitest Snapshot v1

exports[`should support Blockquote 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Blockquote}><Dynamic component={__ctx.builtins.Paragraph}>Lorem ipsum dolor.</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support Break 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}>foo··
bar</Dynamic></Dynamic> );
}
"
`;

exports[`should support Code 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Code} lang={\`js\`} meta={\`highlight-line=\\"2\\"\`}>{\`foo()
bar()
baz()\`}</Dynamic></Dynamic> );
}
"
`;

exports[`should support Definition 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Definition} url={\`https://example.com\`} identifier={\`alpha\`} label={\`Alpha\`} /></Dynamic> );
}
"
`;

exports[`should support Delete 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}><Dynamic component={__ctx.builtins.Delete}>alpha</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support Emphasis 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}><Dynamic component={__ctx.builtins.Emphasis}>Lorem</Dynamic> <Dynamic component={__ctx.builtins.Emphasis}>Ipsum</Dynamic> dolor.</Dynamic></Dynamic> );
}
"
`;

exports[`should support Footnote 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}>^[alpha bravo]</Dynamic></Dynamic> );
}
"
`;

exports[`should support FootnoteDefinition 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.FootnoteDefinition} identifier={\`alpha\`} label={\`alpha\`}><Dynamic component={__ctx.builtins.Paragraph}>bravo and charlie.</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support FootnoteReference 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}>[^alpha]</Dynamic></Dynamic> );
}
"
`;

exports[`should support Heading 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Heading} depth={1}>Lorem</Dynamic></Dynamic> );
}
"
`;

exports[`should support Heading 2`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Heading} depth={2}>Lorem</Dynamic></Dynamic> );
}
"
`;

exports[`should support Heading 3`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Heading} depth={3}>Lorem</Dynamic></Dynamic> );
}
"
`;

exports[`should support Heading 4`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Heading} depth={4}>Lorem</Dynamic></Dynamic> );
}
"
`;

exports[`should support Heading 5`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Heading} depth={5}>Lorem</Dynamic></Dynamic> );
}
"
`;

exports[`should support Heading 6`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Heading} depth={6}>Lorem</Dynamic></Dynamic> );
}
"
`;

exports[`should support Html 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}><Dynamic component={typeof div === 'undefined' ? __ctx.components.div : div}>Hello World</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support Image 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}><Dynamic component={__ctx.builtins.Image} url={\`https://example.com/favicon.ico\`} title={\`bravo\`} alt={\`alpha\`} /></Dynamic></Dynamic> );
}
"
`;

exports[`should support ImageReference 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}>![alpha][bravo]</Dynamic></Dynamic> );
}
"
`;

exports[`should support InlineCode 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}><Dynamic component={__ctx.builtins.InlineCode}>{\`foo()\`}</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support Link 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}><Dynamic component={__ctx.builtins.Link} url={\`https://example.com\`} title={\`bravo\`}>alpha</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support LinkReference 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}>[alpha][Bravo]</Dynamic></Dynamic> );
}
"
`;

exports[`should support List 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.List} ordered={true} spread={false} start={1}><Dynamic component={__ctx.builtins.ListItem} spread={false}><Dynamic component={__ctx.builtins.Paragraph}>Lorem Ipsum dolor.</Dynamic></Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support List 2`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.List} ordered={false} spread={false}><Dynamic component={__ctx.builtins.ListItem} spread={false}><Dynamic component={__ctx.builtins.Paragraph}>Lorem Ipsum dolor.</Dynamic></Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support List 3`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.List} ordered={false} spread={false}><Dynamic component={__ctx.builtins.ListItem} spread={false} checked={true}><Dynamic component={__ctx.builtins.Paragraph}>Lorem Ipsum dolor.</Dynamic></Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support List 4`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.List} ordered={false} spread={false}><Dynamic component={__ctx.builtins.ListItem} spread={false} checked={false}><Dynamic component={__ctx.builtins.Paragraph}>Lorem Ipsum dolor.</Dynamic></Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support ListItem 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.List} ordered={false} spread={false}><Dynamic component={__ctx.builtins.ListItem} spread={false}><Dynamic component={__ctx.builtins.Paragraph}>Lorem Ipsum dolor.</Dynamic></Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support MDX ESM 1`] = `
"import Box from 'box';
import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}></Dynamic> );
}
"
`;

exports[`should support MDX JS 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}>{1 + 1}</Dynamic> );
}
"
`;

exports[`should support MDX JSX 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}><Dynamic component={typeof Box === 'undefined' ? __ctx.components.Box : Box}>Hello World</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support MDX JSX 2`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}><Dynamic component={__ctx.components['some-box']}>Hello World</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support MDX JSX 3`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}><Dynamic component={__ctx.components['some:box']}>Hello World</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support MDX JSX 4`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={typeof Box === 'undefined' ? __ctx.components.Box : Box}><Dynamic component={__ctx.builtins.Paragraph}>Hello World</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support MDX JSX 5`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.components['some-box']}><Dynamic component={__ctx.builtins.Paragraph}>Hello World</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support MDX JSX 6`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.components['some:box']}><Dynamic component={__ctx.builtins.Paragraph}>Hello World</Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support Paragraph 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}>Lorem ipsum dolor.</Dynamic></Dynamic> );
}
"
`;

exports[`should support Strong 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Paragraph}><Dynamic component={__ctx.builtins.Strong}>Lorem</Dynamic> <Dynamic component={__ctx.builtins.Strong}>Ipsum</Dynamic> dolor.</Dynamic></Dynamic> );
}
"
`;

exports[`should support Table 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Table} align={[\\"left\\",\\"center\\"]}><Dynamic component={__ctx.builtins.TableRow}><Dynamic component={__ctx.builtins.TableCell}>foo</Dynamic><Dynamic component={__ctx.builtins.TableCell}>bar</Dynamic></Dynamic><Dynamic component={__ctx.builtins.TableRow}><Dynamic component={__ctx.builtins.TableCell}>baz</Dynamic><Dynamic component={__ctx.builtins.TableCell}>qux</Dynamic></Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support Table, TableRow and TableCell 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.Table} align={[\\"left\\",\\"center\\"]}><Dynamic component={__ctx.builtins.TableRow}><Dynamic component={__ctx.builtins.TableCell}>foo</Dynamic><Dynamic component={__ctx.builtins.TableCell}>bar</Dynamic></Dynamic><Dynamic component={__ctx.builtins.TableRow}><Dynamic component={__ctx.builtins.TableCell}>baz</Dynamic><Dynamic component={__ctx.builtins.TableCell}>qux</Dynamic></Dynamic></Dynamic></Dynamic> );
}
"
`;

exports[`should support ThematicBreak 1`] = `
"import { useMDX } from 'mdx-source';

export default function Component(props) {
 const __ctx = useMDX();
 return (
<Dynamic component={__ctx.builtins.Root}><Dynamic component={__ctx.builtins.ThematicBreak} /></Dynamic> );
}
"
`;
